Implement '/v1/wallets/operations' (#10)
* Add '/v1/wallets/operations'
* Add '/v1/wallets/operations' to the OpenAPI spec
